--- a/resources/frontend_client/index_template.html
+++ b/resources/frontend_client/index_template.html
@@ -9,7 +9,7 @@
 
         {{{embed_code}}}
 
-        <title>Metabase</title>
+        <title>SkillMaster BI</title>
 
         <base href={{{base_href}}} />
 
@@ -69,7 +69,19 @@
             })();
         </script>
 
+		
+			
+			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-102301235-7"></script>
+			<script>
+			  window.dataLayer = window.dataLayer || [];
+			  function gtag(){dataLayer.push(arguments);}
+			  gtag('js', new Date());
+
+			  gtag('config', 'UA-102301235-7');
+			</script>
+			
         <script type="text/javascript">
+		// by default from reposrc
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
